--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,10 @@ Section: python
 Priority: optional
 Maintainer: Mathias Ertl <mati@jabber.at>
 XSBC-Orig-Maintainer: Debian XMPP Maintainers <pkg-xmpp-devel@lists.alioth.debian.org>
-Build-Depends: debhelper (>= 9), dh-python, python-all, python3-all, python3-gi
+Build-Depends: debhelper (>= 11), dh-python, python-all, python3-all, python3-gi
 Standards-Version: 4.1.4
-Homepage: https://python-nbxmpp.gajim.org/
+Rules-Requires-Root: no
+Homepage: https://dev.gajim.org/gajim/python-nbxmpp
 Vcs-Git: https://github.com/jabber-at/python-nbxmpp.git
 Vcs-Browser: https://github.com/jabber-at/python-nbxmpp
 
@@ -34,6 +35,7 @@ Description: Non blocking Jabber/XMPP Python 3 library
 Package: python-nbxmpp-doc
 Architecture: all
 Section: doc
+Multi-Arch: foreign
 Depends: ${misc:Depends}
 Description: Non blocking Jabber/XMPP Python library, documentation
  python-nbxmpp is a Python library that provides a way for Python applications
